# OOP2-Basic-interpreter

./: CMakeLists.txt  README.md  main.cpp
Basic/: Basic.cpp  evalstate.cpp  evalstate.h  exp.cpp  exp.h  parser.cpp  program.cpp  program.h  statement.cpp  statement.h
